src/txn/txn.c
@@ -67,6 +67,35 @@ __wt_txn_release_snapshot(WT_SESSION_IMPL *session)
 }
 
 /*
+ * __wt_txn_am_oldest --
+ *	Am I the oldest transaction in the system?
+ */
+int
+__wt_txn_am_oldest(WT_SESSION_IMPL *session)
+{
+	WT_CONNECTION_IMPL *conn;
+	WT_TXN *txn;
+	WT_TXN_GLOBAL *txn_global;
+	WT_TXN_STATE *s;
+	uint64_t id;
+	uint32_t i, session_cnt;
+
+	conn = S2C(session);
+	txn = &session->txn;
+	txn_global = &conn->txn_global;
+
+	if (txn->id == WT_TXN_NONE)
+		return (0);
+
+	WT_ORDERED_READ(session_cnt, conn->session_cnt);
+	for (i = 0, s = txn_global->states; i < session_cnt; i++, s++)
+		if ((id = s->id) != WT_TXN_NONE && TXNID_LT(id, txn->id))
+			return (0);
+
+	return (1);
+}
+
+/*
  * __wt_txn_update_oldest --
  *	Sweep the running transactions to update the oldest ID required.
  */
